Add link to repo

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 Created by FranekDev
             </span>
             <div class="github">
-                <a href=""><img src="./images/github.png" alt="Github"></a>
+                <a href="https://github.com/FranekDev/rock-paper-scissors" target="_blank"><img src="./images/github.png" alt="Github"></a>
             </div>
         </footer>
 
